# QText_Edit

./: CMakeLists.txt  Textedit.qml  textedit.cpp  textedit.h  textedit.pro  textedit.qrc
